data/derived/sp14/progs/unify/prog4354.ml.out
Characters 122-124:
  cos(pi *. e1)
            ^^
Error: This expression has type expr but an expression was expected of type
         float
